--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, h7, h8, p, a, li, label {
 	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	font-weight: normal;
 }
 
 h1 {
@@ -41,9 +42,13 @@ h1 {
 
 h2 {
 	color: #333333;
-	font-weight: heavy;
+	font-weight: bold;
 	font-size: 1.5em;
 	margin-top: 10px;
+}
+
+img.media-img {
+	margin-right: 1em;
 }
 
 #second-content div.grid-25.tablet-grid-25.mobile-grid-50 {
@@ -80,8 +85,10 @@ h4 {
 h5 {
 	padding-bottom: 10px;
 	border-bottom-style: solid;
-	border-bottom-width: thin;
+	border-bottom-width: 3px;
 	margin-bottom: 0;
+	font-weight: bold;
+	color: #ed5100;
 }
 
 label {
@@ -171,6 +178,11 @@ a {
 	color: rgb(0, 36, 156);
 	text-decoration: none;
 	line-height: 1.8em;
+	font-weight: inherit;
+}
+
+#first-column h5 a {
+	color: #ed5100;
 }
 
 small {
@@ -212,6 +224,10 @@ div.flexslider.banner {
 	z-index: 99999;
 }
 
+div#logo-space {
+	float: left;
+}
+
 div.form-group {
 	display: block;
 	margin-right: auto;
@@ -231,7 +247,6 @@ input, textarea {
 
 div.footer-title {
 	background-color: #002b4b;
-	padding: 2px;
 }
 
 #footer-content {
@@ -240,7 +255,7 @@ div.footer-title {
 	padding-right: 0px;
 	margin-bottom: 30px;
 	top: 50px;
-	margin-top: 30px;
+	margin-top: 0;
 	position: relative;
 }
 
@@ -329,6 +344,7 @@ div.banner {
 	width: 100%;
 	margin-bottom: 15px;
 	min-height: 155px;
+	clear: left;
 }
 
 div#IP-products-banner {
