--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,7 @@
 #menu-bar {
 	margin: 0px auto;
 	padding: 0px 0px 0px 0px;
-  height: 3em;
+  height: 3.6em;
   width: 100%;
   line-height: 100%;
   border-radius: 0px;
@@ -33,7 +33,7 @@ float: right;
 
 #menu-bar a {
   font-weight: lighter;
-	font: 1em/2.87em helvetica;
+	font: 1.2em/2.87em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 	font-style: normal;
 	color: #FFFDFD;
   text-decoration: none;
@@ -98,10 +98,10 @@ float: right;
 
 @media screen and (min-width: 769px) and (max-width:1024px) {
 	#menu-bar a {
-			font: 0.8em/2.5em helvetica;
+			font: 1.2em/2.5em helvetica;
 		}
 	#menu-bar {
-		height: 2.37em;
+		height: 3.2em;
 		}
 }
 
