--- a/flexslider/flexslider.css
+++ b/flexslider/flexslider.css
@@ -36,7 +36,11 @@
 
 /* FlexSlider Necessary Styles
 *********************************/
-.flexslider {margin: 0; padding: 0; z-index: 2;
+.flexslider {
+margin: 0; 
+padding: 0; 
+z-index: 2;
+clear: left;
 }
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img {
