--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 * {
-	position: relative;
+	/*position: relative;*/
 }
 
 body {
+	-webkit-font-smoothing: antialiased;
 	background: url(background-image.jpg) 0 0 no-repeat white;
 	background-size: 100% auto; /* width and height, can be %, px or whatever. */
 	width: 100%;
@@ -10,6 +11,8 @@ body {
 	margin-top: 0;
 	margin-bottom: 0;
 	padding: 0;
+	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	font-weight: normal;
 }
 
 #first-column {
@@ -19,11 +22,6 @@ body {
 
 #second-content {
 	margin-top: 45px;
-}
-
-h1, h2, h3, h4, h5, h6, h7, h8, p, a, li, label {
-	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-	font-weight: normal;
 }
 
 h1 {
@@ -166,7 +164,7 @@ ul {
 	margin-top: 0;
 	margin-right: 0;
 	margin-bottom: 0;
-	padding-left: 20px;
+	/*padding-left: 20px; */
 }
 
 li {
@@ -206,8 +204,8 @@ small {
 }
 
 div.flexslider img{
-	width: 100%;
-	z-index: 5;
+	margin: 0;
+	padding: 0;
 }
 
 div.flex-viewport {
@@ -217,15 +215,6 @@ div.flex-viewport {
 div.flexslider.banner {
 	margin-bottom: 40px;
 	
-}
-
-.nav-container {
-	overflow: hidden;
-	z-index: 99999;
-}
-
-div#logo-space {
-	float: left;
 }
 
 div.form-group {
@@ -261,6 +250,7 @@ div.footer-title {
 
 .footer-img {
 	min-width: 220px;
+	height: 80px;
 }
 
 div.media img {
@@ -311,17 +301,12 @@ footer {
 
 ul.footer li {
 	margin-right: 0px;
-	margin-bottom: 6px;
 	margin-left: 0px;
 	float: left;
 	position: relative;
 	list-style: none;
 	padding-right: 15px;
 	line-height: 4em;
-}
-
-div.media-content {
-	margin-top: 2em;
 }
 
 li.footer {
@@ -331,6 +316,15 @@ li.footer {
   position: relative;
   list-style: none;
   height: 50px;
+}
+
+div#header {
+	display: block;
+	width: 100%;
+}
+
+div.nav-container {
+		
 }
 
 /* @end */
@@ -349,6 +343,8 @@ div.banner {
 
 div#IP-products-banner {
 	background: url(banners/hd_ip-products.jpg) no-repeat;
+	background-size: cover;
+	
 	
 }
 
@@ -446,13 +442,27 @@ div#contact-banner {
 	margin-bottom: 0;
 	text-decoration: none;
 	padding-bottom: 0;
-	position: absolute;
+	position: relative;
 	top: 7px;
 	border: 1px solid white;
 	bottom: 7px;
 	padding-top: 75px;
 	right: 0;
 	left: 0;
+}
+
+.slideshow { 
+	position: relative; 
+	overflow: auto;
+	width: 100%;
+	z-index: 1;
+}
+.slideshow li { 
+    list-style: none;
+    max-width: 100%; 
+}
+.slideshow ul li { 
+	float: left;
 }
 
 #first-column ul.nav.nav-lines li.active {
@@ -484,12 +494,13 @@ div#wrap {
 	position: relative;
 	top: -10px;
 	padding: 27px;
+	z-index: 0;
 }
 
 @media (max-width: 400px) {
 
 div#wrap {
-		width: 100%;
+		width: 340px;
 	margin-left: -6px;
 }
 	
